fixed images pos on facilities on mobile and packages items

--- a/styling/sub-pages.css
+++ b/styling/sub-pages.css
@@ -52,6 +52,10 @@ section.packages {
     margin-bottom: calc(var(--base-spacing)*7);
 }
 
+section.packages .columns {
+    align-items: stretch;
+}
+
 section.packages .one-column {
     margin-bottom: calc(var(--base-spacing)*3);
 }
@@ -62,7 +66,7 @@ a.package-links {
 
 .button.package {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     padding-bottom: calc(var(--base-spacing)*7);
 }
 
@@ -130,6 +134,14 @@ section.sub-page-intro.facilities-page .image {
     width: 250px;
     height: 150px;    
 }
+
+@media only screen 
+  and (max-width: 750px) {
+    section .images {
+        margin: calc(var(--base-spacing)*1) auto 0px auto !important;
+        padding-top: calc(var(--base-spacing)*1) !important;
+    }
+  }
 
 section.sub-page-intro.facilities-page .floating-image {
     bottom: calc(var(--base-spacing)*8);
